# tbfm

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  flake.nix
src/: main.cpp
